--- a/nodes.yml
+++ b/nodes.yml
@@ -9,42 +9,42 @@
     - ip: 192.168.250.10
       auto_config: true
       method: 'static'
-  mem: 1024
+  mem: 512
   provision: true
   vcpu: 2
-- name: 'node1'
-  ansible_groups:
-    - 'consul_all'
-    - 'consul_servers'
-  box: 'mrlesmithjr/xenial64'
-  desktop: false
-  interfaces:
-    - ip: 192.168.250.11
-      auto_config: true
-      method: 'static'
-  mem: 512
-  provision: true
-  vcpu: 1
-- name: 'node2'
-  ansible_groups:
-    - 'consul_all'
-    - 'consul_servers'
-  box: 'mrlesmithjr/xenial64'
-  desktop: false
-  interfaces:
-    - ip: 192.168.250.12
-      auto_config: true
-      method: 'static'
-  mem: 512
-  provision: true
-  vcpu: 1
+# - name: 'node1'
+#   ansible_groups:
+#     - 'consul_all'
+#     - 'consul_servers'
+#   box: 'mrlesmithjr/xenial64'
+#   desktop: false
+#   interfaces:
+#     - ip: 192.168.250.11
+#       auto_config: true
+#       method: 'static'
+#   mem: 512
+#   provision: true
+#   vcpu: 1
+# - name: 'node2'
+#   ansible_groups:
+#     - 'consul_all'
+#     - 'consul_servers'
+#   box: 'mrlesmithjr/xenial64'
+#   desktop: false
+#   interfaces:
+#     - ip: 192.168.250.12
+#       auto_config: true
+#       method: 'static'
+#   mem: 512
+#   provision: true
+#   vcpu: 1
 - name: 'node3'
   ansible_groups:
     - 'vault_servers'
   box: 'mrlesmithjr/xenial64'
   desktop: false
   interfaces:
-    - ip: 192.168.250.13
+    - ip: 192.168.250.11
       auto_config: true
       method: 'static'
   mem: 512
@@ -57,38 +57,38 @@
   box: 'mrlesmithjr/xenial64'
   desktop: false
   interfaces:
-    - ip: 192.168.250.14
+    - ip: 192.168.250.12
       auto_config: true
       method: 'static'
   mem: 1024
   provision: true
   vcpu: 1
-- name: 'node5'
-  ansible_groups:
-    - 'docker_hosts'
-    - 'docker_swarm_managers'
-  box: 'mrlesmithjr/xenial64'
-  desktop: false
-  interfaces:
-    - ip: 192.168.250.15
-      auto_config: true
-      method: 'static'
-  mem: 1024
-  provision: true
-  vcpu: 1
-- name: 'node6'
-  ansible_groups:
-    - 'docker_hosts'
-    - 'docker_swarm_managers'
-  box: 'mrlesmithjr/xenial64'
-  desktop: false
-  interfaces:
-    - ip: 192.168.250.16
-      auto_config: true
-      method: 'static'
-  mem: 1024
-  provision: true
-  vcpu: 1
+# - name: 'node5'
+#   ansible_groups:
+#     - 'docker_hosts'
+#     - 'docker_swarm_managers'
+#   box: 'mrlesmithjr/xenial64'
+#   desktop: false
+#   interfaces:
+#     - ip: 192.168.250.15
+#       auto_config: true
+#       method: 'static'
+#   mem: 1024
+#   provision: true
+#   vcpu: 1
+# - name: 'node6'
+#   ansible_groups:
+#     - 'docker_hosts'
+#     - 'docker_swarm_managers'
+#   box: 'mrlesmithjr/xenial64'
+#   desktop: false
+#   interfaces:
+#     - ip: 192.168.250.16
+#       auto_config: true
+#       method: 'static'
+#   mem: 1024
+#   provision: true
+#   vcpu: 1
 - name: 'node7'
   ansible_groups:
     - 'consul_all'
@@ -98,7 +98,7 @@
   box: 'mrlesmithjr/xenial64'
   desktop: false
   interfaces:
-    - ip: 192.168.250.17
+    - ip: 192.168.250.13
       auto_config: true
       method: 'static'
   mem: 1024
@@ -113,7 +113,7 @@
   box: 'mrlesmithjr/xenial64'
   desktop: false
   interfaces:
-    - ip: 192.168.250.18
+    - ip: 192.168.250.14
       auto_config: true
       method: 'static'
   mem: 1024
