--- a/playbook.yml
+++ b/playbook.yml
@@ -86,26 +86,26 @@
                 - '192.168.250.13:9100'
             - targets:
                 - '192.168.250.14:9100'
-            - targets:
-                - '192.168.250.15:9100'
-            - targets:
-                - '192.168.250.16:9100'
-            - targets:
-                - '192.168.250.17:9100'
-            - targets:
-                - '192.168.250.18:9100'
+            # - targets:
+            #     - '192.168.250.15:9100'
+            # - targets:
+            #     - '192.168.250.16:9100'
+            # - targets:
+            #     - '192.168.250.17:9100'
+            # - targets:
+            #     - '192.168.250.18:9100'
         - job_name: 'cAdvisor'
           static_configs:
             - targets:
                 - '192.168.250.14:8080'
             - targets:
-                - '192.168.250.15:8080'
+                - '192.168.250.13:8080'
             - targets:
-                - '192.168.250.16:8080'
-            - targets:
-                - '192.168.250.17:8080'
-            - targets:
-                - '192.168.250.18:8080'
+                - '192.168.250.12:8080'
+            # - targets:
+            #     - '192.168.250.17:8080'
+            # - targets:
+            #     - '192.168.250.18:8080'
         - job_name: 'netdata-scrape'
           metrics_path: "/api/v1/allmetrics?format=prometheus"
           static_configs:
@@ -119,14 +119,14 @@
                 - '192.168.250.13:19999'
             - targets:
                 - '192.168.250.14:19999'
-            - targets:
-                - '192.168.250.15:19999'
-            - targets:
-                - '192.168.250.16:19999'
-            - targets:
-                - '192.168.250.17:19999'
-            - targets:
-                - '192.168.250.18:19999'
+            # - targets:
+            #     - '192.168.250.15:19999'
+            # - targets:
+            #     - '192.168.250.16:19999'
+            # - targets:
+            #     - '192.168.250.17:19999'
+            # - targets:
+            #     - '192.168.250.18:19999'
 
   roles:
     - role: ansible-grafana
