--- a/playbook.yml
+++ b/playbook.yml
@@ -78,14 +78,14 @@
           static_configs:
             - targets:
                 - '127.0.0.1:9100'
-            - targets:
-                - '192.168.250.11:9100'
-            - targets:
-                - '192.168.250.12:9100'
-            - targets:
-                - '192.168.250.13:9100'
-            - targets:
-                - '192.168.250.14:9100'
+            # - targets:
+            #     - '192.168.250.11:9100'
+            # - targets:
+            #     - '192.168.250.12:9100'
+            # - targets:
+            #     - '192.168.250.13:9100'
+            # - targets:
+            #     - '192.168.250.14:9100'
             # - targets:
             #     - '192.168.250.15:9100'
             # - targets:
@@ -97,11 +97,11 @@
         - job_name: 'cAdvisor'
           static_configs:
             - targets:
-                - '192.168.250.14:8080'
-            - targets:
-                - '192.168.250.13:8080'
-            - targets:
-                - '192.168.250.12:8080'
+                - '192.168.250.10:8080'
+            # - targets:
+            #     - '192.168.250.13:8080'
+            # - targets:
+            #     - '192.168.250.12:8080'
             # - targets:
             #     - '192.168.250.17:8080'
             # - targets:
@@ -111,14 +111,14 @@
           static_configs:
             - targets:
                 - '127.0.0.1:19999'
-            - targets:
-                - '192.168.250.11:19999'
-            - targets:
-                - '192.168.250.12:19999'
-            - targets:
-                - '192.168.250.13:19999'
-            - targets:
-                - '192.168.250.14:19999'
+            # - targets:
+            #     - '192.168.250.11:19999'
+            # - targets:
+            #     - '192.168.250.12:19999'
+            # - targets:
+            #     - '192.168.250.13:19999'
+            # - targets:
+            #     - '192.168.250.14:19999'
             # - targets:
             #     - '192.168.250.15:19999'
             # - targets:
